Flores para Jessi

--- a/index.html
+++ b/index.html
@@ -57,12 +57,10 @@
         </div>
 
         <div>
-            <h1>Para mi querida Leydi</h1>
+            <h1>Para Mi JESSI</h1>
             <button id="confettiButton">Sorpresa</button>
         </div>
-        <div>
-            <p>cositas que se aprenden</p>
-        </div>
+        
     
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
